# algochecker

./: .gitignore  CMakeLists.txt  README.md
include/algochecker/: analyzer.h
include/dynamic_analyzer/: benchmarker.h  data_generator.h  exporter.h  visualizer.h
include/static_analyzer/: complexity_evaluator.h  file_loader.h  lexer.h  parser.h
include/web_server/: server.h
src/: main.cpp
src/algochecker/: analyzer.cpp
src/dynamic_analyzer/: benchmarker.cpp  data_generator.cpp  exporter.cpp  visualizer.cpp
src/static_analyzer/: complexity_evaluator.cpp  file_loader.cpp  lexer.cpp  parser.cpp
src/web_server/: server.cpp
tests/: analyzer_api_test.cpp  test_const.cpp  test_cubic.cpp  test_lexer.cpp  test_linear.cpp  test_parser.cpp  test_quadratic.cpp
web/: index.html  script.js
